@startuml domain
title Ergonaut - Domain (current)

hide circle
hide empty methods

class Project {
  +Guid Id
  +string Title
  +string? Description
  +DateTime CreatedAt
  +DateTime UpdatedAt
  +SourceLabel? SourceLabel
  +IProject Update(title, description, sourceLabel)
}

class WorkItem {
  +Guid Id
  +Guid ProjectId
  +string Title
  +string Description
  +WorkItemStatus Status
  +WorkItemPriority? Priority
  +DateTime CreatedAt
  +DateTime UpdatedAt
  +DateTime? DueDate
  +SourceLabel? SourceLabel
  +Dictionary<string, JsonElement?>? SourceData
  +IWorkItem Update(title, status, description, priority, dueDate, sourceLabel, sourceData)
}

enum WorkItemStatus {
  New
  InProgress
  Done
}

enum WorkItemPriority {
  Low
  Medium
  High
}

enum SourceLabel {
  Ergonaut
  Sentinel
}

Project "1" o-- "*" WorkItem : ProjectId
WorkItem ..> WorkItemStatus
WorkItem ..> WorkItemPriority
Project ..> SourceLabel
WorkItem ..> SourceLabel

@enduml
